feat: 增加板块成员涨跌结构 (#287)
